--- a/_posts/2014-06-22-vim-python3.md
+++ b/_posts/2014-06-22-vim-python3.md
@@ -43,5 +43,5 @@ $ sudo make install
 
 というわけでこれで python3 を楽しくエディットできますね．めでたしめでたし．
 
-![jedi3.png]({{site.baseurl}}/img/jedi3.img)
+![jedi3.png]({{site.baseurl}}/img/jedi3.png)
 たのしいえでぃっと
