--- a/_posts/2014-08-04-pythonjs-0.md
+++ b/_posts/2014-08-04-pythonjs-0.md
@@ -24,7 +24,8 @@ javascript での python 実装という点で言えば [skulpt](https://github.
 確保してるっぽい．っぽい，のだが，star 数やコミットの活発さの割に [情報量が](https://www.google.co.jp/search?q="PythonJS")
 [えらく少なく](http://stackoverflow.com/search?q=pythonjs) て，まとまったドキュメンテーションの類もないっぽくてかなり困惑している．
 そもそも気分的に requirejs に依存してる感じっぽくて，[`--no-wrapper` 付けないとそれでハマる](http://nyalog.blogspot.jp/2014_07_01_archive.html)
-とかそういうアレだったり（リンク先見るまで気づかなかった，ありがとうございます！），あるいはひょっとして jquery にも部分的に依存している？うーん．
+とかそういうアレだったり（リンク先見るまで気づかなかった，ありがとうございます！），`--no-wrapper` つけても requirejs の不在が原因とも見えるエラーが出たり，
+あるいはひょっとして jquery にも部分的に依存している？うーん．
 
 一番シンプルな (`print("hello, world!")` だけ) のは通ったけど，
 
