--- a/_posts/2014-08-29-footnote.md
+++ b/_posts/2014-08-29-footnote.md
@@ -21,7 +21,7 @@ categories: jekyll, markdown
 
 で，こういう感じになる．
 
-こういうところに例文として書く気の利いた文章を考えるの難しい[^mumu]．
+> こういうところに例文として書く気の利いた文章を考えるの難しい[^mumu]．
 
 [^mumu]: だからといってこういう文章を採用していいということにはなるまいが
 
