--- a/_posts/2014-09-18-katex0.md
+++ b/_posts/2014-09-18-katex0.md
@@ -26,7 +26,7 @@ categories: javascript, LaTeX
 [KaTeX](http://khan.github.io/KaTeX/) というものが存在する．
 
 これは mathjax のような，tex ベースの数式組版ライブラリで，高速で依存関係無しに動き，TeX の美しさを持つライブラリという触れ込みである．
-実際試してみると明らかに mathjax よりも高速，殆どストレスなく閲覧できる．また，環境によらず同じ組版結果となるので，
+実際試してみると明らかに mathjax よりも高速，殆どストレスなく閲覧できる[^speed]．また，環境によらず同じ組版結果となるので，
 node.js で server-side で組んどくというようなことも出来るということだ．
 
 公式サイトの例(マウスホバーで中身が見えるのは僕が細工した)．
@@ -55,7 +55,11 @@ katex.render(latexCode,domToWriteOn);
 
 `document.getElementsByTagName` とかで要素を取ってきてループで回すといいんじゃないだろうか（この記事ではそうしている）．
 
+なお，ライセンスは MIT なので色々やり放題でもあります．
+
 ## 夢
 
 まだ Initial release から 3日しか経っておらず，行列サポートはじめさまざまな issue が[立っている](https://github.com/Khan/KaTeX/issues) ところだけれど，
 これは非常に期待できるのではないだろうか．[reveal.js](http://lab.hakim.se/reveal-js/) とか [impress.js](http://bartaz.github.io/impress.js/) とうまく組み合わせれば beamer のよりスタイリッシュな代替としての利用もできそうですね．めっちゃ楽しみ．
+
+[^speed]: ここで speed test やってるっぽい (http://jsperf.com/katex-vs-mathjax/)
