--- a/_posts/2014-09-18-katex0.md
+++ b/_posts/2014-09-18-katex0.md
@@ -66,7 +66,7 @@ katex.render(latexCode,domToWriteOn);
 {% endhighlight %}
 
 `document.getElementsByClassName` とかで要素を取ってきてループで回すといいんじゃないだろうか（この記事ではそうしている）．
-因みに，タグの中にベタ書きすると `<` とかで扱いがややこしいから，本家 github.io では `<div class="tex" data-expr="\int"></div>` みたいな書き方になっていて，これが一番やりやすいかもしれない．
+因みに，タグの中にベタ書きすると `<` とかで扱いがややこしいから，本家 github.io では `<div class="tex" data-expr="\int"></div>` みたいな書き方になっていて，これが一番やりやすいかもしれない．…と思ってたけど `<pre>` とかなら普通に問題ないな，うん．今 [pull-req](https://github.com/matthaywardwebdesign/KaTeX/commit/b4bf4d2c17aed7d9e235c4d20fd3ca8bf191bf07) が入ってる．
 
 なお，ライセンスは MIT なので色々やり放題でもあります．
 
