--- a/_posts/2014-09-18-katex0.md
+++ b/_posts/2014-09-18-katex0.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "javascript で LaTeX : KaTeX がすごい"
 date:  2014-09-18 12:00:00 UTC+9
-categories: javascript, LaTeX
+categories: javascript LaTeX
 ---
 <link rel="stylesheet" href="{{site.baseurl}}/libs/katex/katex.min.css">
 <script src="{{site.baseurl}}/libs/katex/katex.min.js"></script>
@@ -12,7 +12,7 @@ categories: javascript, LaTeX
     var elms = document.getElementsByTagName('katex')
     for (var i=0; i<elms.length; i++){
       var elm = elms[i];
-      var tex = elm.innerHTML
+      var tex = elm.innerHTML;
       katex.render(tex,elm);
       elm.title = tex;
     }
