fix categories (don't separate with commas, use spaces)

--- a/_posts/2014-08-29-footnote.md
+++ b/_posts/2014-08-29-footnote.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "jekyll で 脚注使いたい"
 date:  2014-08-29 23:37:50 UTC+9
-categories: jekyll, markdown
+categories: jekyll markdown
 ---
 
 ## Jekyll でも footnote 使いたい
