--- a/_posts/2014-09-18-katex0.md
+++ b/_posts/2014-09-18-katex0.md
@@ -66,9 +66,14 @@ katex.render(latexCode,domToWriteOn);
 {% endhighlight %}
 
 `document.getElementsByClassName` とかで要素を取ってきてループで回すといいんじゃないだろうか（この記事ではそうしている）．
-因みに，タグの中にベタ書きすると `<` とかで扱いがややこしいから，本家 github.io では `<div class="tex" data-expr="\int"></div>` みたいな書き方になっていて，これが一番やりやすいかもしれない．…と思ってたけど `<pre>` とかなら普通に問題ないな，うん．今 [pull-req](https://github.com/matthaywardwebdesign/KaTeX/commit/b4bf4d2c17aed7d9e235c4d20fd3ca8bf191bf07) が入ってる．
+因みに，<del>タグの中にベタ書きすると `<` とかで扱いがややこしいから</del><small>追記2015-05-20</small>，本家 github.io では `<div class="tex" data-expr="\int"></div>` みたいな書き方になっていて，これが一番やりやすいかもしれない．…と思ってたけど `<pre>` とかなら普通に問題ないな，うん．今 [pull-req](https://github.com/matthaywardwebdesign/KaTeX/commit/b4bf4d2c17aed7d9e235c4d20fd3ca8bf191bf07) が入ってる．
 
 なお，ライセンスは MIT なので色々やり放題でもあります．
+
+追記: というより，`innerHTML` じゃなくて [`textContent`](https://developer.mozilla.org/en-US/docs/Web/API/Node/textContent)を使うのが
+よいとおもう．html の中に例えば `$$` で囲って数式を入れるのが
+contrib の中に [プラグイン的に入っていて](https://github.com/Khan/KaTeX/tree/master/contrib/auto-render)，その中でも
+[textContent が使われている](https://github.com/Khan/KaTeX/blob/b29b8c40ea48aebc3e85d3b879968db3dfe4c2cd/contrib/auto-render/auto-render.js#L55).
 
 ## 夢
 
